Hidden overflow fixes & code optimization

--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -4,6 +4,7 @@
     header {
         position: absolute;
         right: 3rem; top: -1rem;
+        z-index: 3;
 
         h2 {
             .fa-level-up {
