--- a/src/stylesheets/landing.scss
+++ b/src/stylesheets/landing.scss
@@ -26,6 +26,11 @@
     max-height: 100vh;
     color: white;
 
+    h1 {
+        margin-top: 50px;
+        overflow: visible;
+    }
+
     blockquote {
         padding: 0 15%;
         text-align: justify;
