--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -89,6 +89,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow: visible;
 }
 
 .text-center {
