--- a/src/stylesheets/typography.scss
+++ b/src/stylesheets/typography.scss
@@ -16,6 +16,7 @@
 
 .h0 {
     font-size: 44pt;
+    overflow: visible;
 }
 
 h1 {
